crates/math-core/tests/snapshots/error_test__left_with_non_delimiter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\left x 1 \\right)"
---
Error: There must be a parenthesis after "\left", but not found.
   ╭─[ <input>:1:7 ]
   │
 1 │ \left x 1 \right)
   │       ┬  
   │       ╰── expected a delimiter after "\left"
───╯
